@@ -18,6 +18,15 @@
 REVISION HISTORY
 ================
 
+
+--------------------------
+2013-07-16
+- r1003 modify fill for solid-cut only
+  - comment out: Solid_from_Cut(int* mid, ..., const int target)
+  - Solid cutのみを対象とする > fill_by_mid(), fill_seed(), fill_by_bid(), 
+                             Solid_from_Cut(int* mid, …, CompoList* cmp)
+  - /BCtable/LocalBoundary/BC[@]/samplingMode, samplingMethod
+
 --------------------------
 2013-07-15
 
